kubernetes/apps/storage/kopia/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia
  namespace: storage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Kopia
    gethomepage.dev/group: Storage
    gethomepage.dev/icon: kopia.png
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "kopia.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: kopia
          port: 80
